--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-        <title>How to make</title>
+        <title>ID Assignment 1</title>
         <link rel="stylesheet" href="index1.css">
         <script src="https://kit.fontawesome.com/122871f124.js" 
         crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
             background-repeat: no-repeat;
             background-size:cover ;
             background-position: center;
-            height: calc(100vh - 3px)
+            height: 100vh;
             }
         </style>
     </head>
@@ -22,7 +22,7 @@
         <img src="logo.png" class="logo">
         <div class = "navbar">
             <ul>
-                <li><a href="#">About Us</a></li>
+                <li><a href="About.html">About Us</a></li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Bedroom</a></li>
                 <li><a href="#">Dining</a></li>
@@ -34,7 +34,7 @@
         <div class="contents">
             <h1>DESIGN YOUR HOUSE</h1>
             <p>Find out more about different style and furniture.<br>You are also able to customize with help of our consultant</p>
-            <button id="btn2"><span></span>Find Out More</button>
+            <button id="btn2"><a href="#"></a><span></span>Find Out More</a></button>
         </div>
         <section id="features">
             <div class="text">
