--- a/About.html
+++ b/About.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>ID Assignment 1</title>
+        <link rel="stylesheet" href="index1.css">
+        <link rel="script" href="javascript.js">
+        <script src="https://kit.fontawesome.com/122871f124.js" 
+        crossorigin="anonymous"></script>
         <style>
             body {
             background-image: linear-gradient(rgba(0, 0, 0, 0.473),rgba(0, 0, 0, 0.5)),url('download.png');
@@ -12,6 +16,23 @@
             background-position: center;
             height: 100vh;
             }
+            .mySlides {display: none}
+            img {vertical-align: middle;}
         </style>
     </head>
+    <body>
+        <body>
+            <img src="logo.png" class="logo">
+            <div class = "navbar">
+                <ul>
+                    <li><a href="index1.html">Home</a></li>
+                    <li><a href="About.html">About Us</a></li>
+                    <li><a href="#">Bedroom</a></li>
+                    <li><a href="#">Dining</a></li>
+                    <li><a href="#">Kitchen</a></li>
+                    <li><button class='btn'><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></button></li>
+                </ul>
+            </div>
+
+    </body>
 </html>
