--- a/index1.html
+++ b/index1.html
@@ -9,39 +9,34 @@
         crossorigin="anonymous"></script>
         <style>
             body {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.473),rgba(0, 0, 0, 0.5)),url('download.png');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.473),rgba(0, 0, 0, 0.5)),url('images/download.png');
             background-repeat: no-repeat;
             background-size:cover ;
             background-position: center;
-            height: 100vh;
+            height: 100% 100%;
             }
         </style>
     </head>
 
     <body>
-        <img src="logo.png" class="logo">
+        <img src="images/logo.png" class="logo">
         <div class = "navbar">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="About.html">About Us</a></li>
+                <li><a href="#">Portfolio</a></li>
                 <li><a href="#">Bedroom</a></li>
                 <li><a href="#">Dining</a></li>
-                <li><a href="#">Kitchen</a></li>
-                <li><button class='btn'><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></button></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>         
         </div>
 
         <div class="contents">
             <h1>DESIGN YOUR HOUSE</h1>
-            <p>Find out more about different style and furniture.<br>You are also able to customize with help of our consultant</p>
-            <button id="btn2"><a href="#"></a><span></span>Find Out More</a></button>
+            <p>Interior about unique, creative and innovative. <br>Our main goal is to create an environment best suited to your personality, lifestyle and selections.</p>
+            <a href="About.html"><button id="btn2"><span></span>Find Out More</button></a>
         </div>
-        <section id="features">
-            <div class="text">
-                <p>1</p>
-                <h1>19</h1>
-            </div>
-        </section>
     </body>
+
         
 </html>
