--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,26 @@
                 <div class="col">
                     <div class = "required">
                         <form action="#">
-                        <label for="username">Username:</label>
-                        <input type="text" id="username" name="username">
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" value="Enter text here">
                     </div>
+
+                <div class = "required">
+                    <form action="#">
+                    <label for="email">Email:</label>
+                    <input type="text" id="email" value="Enter email address">
                 </div>
-              </div>    
+
+                <div class = "required">
+                    <form action="#">
+                    <label for="Phone">Phone:</label>
+                    <input type="text" id="phone" value="Enter phone number">
+                </div>
+                
+                <div class = "required">
+                    <form action="#">
+                    <label for="Phone">Phone:</label>
+                    <input type="text" id="phone" value="Enter phone number">
+                </div>
+            </div>  
+        </div>
