--- a/contact.html
+++ b/contact.html
@@ -46,10 +46,16 @@
                         <p>Business Hours: 
                             10.00am to 08:00pm (Monday to Saturday)<br>
                             10:00am to 7:00pm (Sunday & Public Holiday)</p>
+
+                        <div id="showroom">
+                            <img src="images/showroom.png" alt="Showroom">
+                        </div>
+
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col1">
+                    <h3>GET A FREE <i><b>QUOTE</b></i> FROM US</h3>
                     <div class = "field">
                         <form action="#">
                         <label>Name:</label>
@@ -91,8 +97,20 @@
                     </div>
 
                     <div class="field">
-                        <label for="subject">Subject</label>
-                        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px",width=200px></textarea>
+                        <label for="subject">Enquiry/Feedback</label>
+                        <textarea id="subject" name="subject" placeholder="Enter your comment here"></textarea>
+                    </div>
+
+                    <div class = "field">
+                        <label>Approximate Budget:</label>
+                        <select name="budget" id="budget">
+                        <option value="select">-- Please Select --</option>
+                        <option value="10k">$10,000</option>
+                        <option value="20k">$20,000</option>
+                        <option value="30k">$30,000</option>
+                        <option value="40k">$40,000</option>
+                        <option value="50kup">$50,000 & above</option>
+                        </select>
                     </div>
                 </div>  
             </div>
