--- a/About.html
+++ b/About.html
@@ -8,19 +8,10 @@
         <link rel="script" href="javascript.js">
         <script src="https://kit.fontawesome.com/122871f124.js" 
         crossorigin="anonymous"></script>
-        <style>
-            body {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.473),rgba(0, 0, 0, 0.5)),url('images/download.png');
-            background-repeat: no-repeat;
-            background-size:cover ;
-            background-position: center;
-            height: 100% 100%;
-            }
-        </style>
     </head>
     <body>
         <body>
-            <img src="images/logo.png" class="logo">
+          <a href="index1.html"><img src="images/logo.png" class="logo"></a>
             <div class = "navbar">
                 <ul>
                     <li><a href="index1.html">Home</a></li>
@@ -47,7 +38,7 @@
                       <h2>Kester Smith</h2>
                       <p id="title">CEO & Founder</p>
                       <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                      <p>Kester_Interior@gmail.com</p>
+                      <p>Kester_Interiors@gmail.com</p>
                       <p><button class="abutton">Contact</button></p>
                     </div>
                   </div>
@@ -60,7 +51,7 @@
                       <h2>Jovan Williams</h2>
                       <p id="title">Team leader / Consultant</p>
                       <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                      <p>Jovan_Interior@gmail.com</p>
+                      <p>Jovan_Interiors@gmail.com</p>
                       <p><button class="abutton">Contact</button></p>
                     </div>
                   </div>
@@ -73,7 +64,7 @@
                       <h2>Jane Doe</h2>
                       <p id="title">Team leader / Interior Designer</p>
                       <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                      <p>Jane_Interior@gmail.com</p>
+                      <p>Jane_Interiors@gmail.com</p>
                       <p><button class="abutton">Contact</button></p>
                     </div>
                   </div>
