--- a/index1.html
+++ b/index1.html
@@ -7,19 +7,10 @@
         <link rel="stylesheet" href="index1.css">
         <script src="https://kit.fontawesome.com/122871f124.js" 
         crossorigin="anonymous"></script>
-        <style>
-            body {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.473),rgba(0, 0, 0, 0.5)),url('images/download.png');
-            background-repeat: no-repeat;
-            background-size:cover ;
-            background-position: center;
-            height: 100% 100%;
-            }
-        </style>
     </head>
 
     <body>
-        <img src="images/logo.png" class="logo">
+        <a href="index1.html"><img src="images/logo.png" class="logo"></a>
         <div class = "navbar">
             <ul>
                 <li><a href="#">Home</a></li>
