--- a/About.html
+++ b/About.html
@@ -61,7 +61,7 @@
                   <div class="card">
                     <img src="images/team1.jpg" alt="John" style="width:100%">
                     <div class="container">
-                      <h2>Jane Doe</h2>
+                      <h2>Yu Xuan</h2>
                       <p id="title">Team leader / Interior Designer</p>
                       <p>Some text that describes me lorem ipsum ipsum lorem.</p>
                       <p>Jane_Interiors@gmail.com</p>
