--- a/index1.html
+++ b/index1.html
@@ -13,12 +13,14 @@
         <a href="index1.html"><img src="images/logo.png" class="logo"></a>
         <div class = "navbar">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index1.html">Home</a></li>
                 <li><a href="About.html">About Us</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>         
         </div>
+
+        <hr>
 
         <div class="contents">
             <h1>DESIGN YOUR HOUSE</h1>
@@ -26,6 +28,4 @@
             <a href="About.html"><button id="btn2"><span></span>Find Out More</button></a>
         </div>
     </body>
-
-        
 </html>
