--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+        
         <title>ID Assignment 1</title>
+
         <link rel="stylesheet" href="index1.css">
         <link rel="script" href="javascript.js">
+        <link rel="stylesheet" href="normalize.css">
+
         <script src="https://kit.fontawesome.com/122871f124.js" 
         crossorigin="anonymous"></script>
     </head>
@@ -26,46 +30,46 @@
         <div class="main">
 
             <h2>PORTFOLIO</h2>
-            <p>Rooms we have design before. This is our Portfolio</p>
+            <p>Rooms we helped to designed! Customize however you want!</p>
 
             <div class="prow">
                 <div class="pcolumn">
                     <div class="pcontent">
                         <img src="images/gameroom.png" alt="Mountains" style="width: 475px; height: 337px;">
-                        <h3>My Work</h3>
-                        <p>Lorem ipsum..</p>
+                        <h3>Gameroom</h3>
+                        <p>A lounge for games and more.</p>
                     </div>
                 </div>
 
                 <div class="pcolumn">
                     <div class="pcontent">
                         <img src="images/kitchen1.png" alt="Lights" style="width: 475px; height: 337px;">
-                        <h3>My Work</h3>
-                        <p>Lorem ipsum..</p>
+                        <h3>Kitchen</h3>
+                        <p>Minimalist and stylish kitchen.</p>
                     </div>
                 </div>
 
                 <div class="pcolumn">
                     <div class="pcontent">
-                        <img src="images/room3.png" alt="Nature" style="width: 475px; height: 337px;">
-                        <h3>My Work</h3>
-                        <p>Lorem ipsum..</p>
+                        <img src="images/modern-bedroom.png" alt="Nature" style="width: 475px; height: 337px;">
+                        <h3>Modern bedroom</h3>
+                        <p>Modern yet bright bedroom.</p>
                     </div>
                 </div>
 
                 <div class="pcolumn">
                     <div class="pcontent">
-                        <img src="images/room4.png" alt="Mountains" style="width: 475px; height: 337px;">
-                        <h3>My Work</h3>
-                        <p>Lorem ipsum..</p>
+                        <img src="images/room4.png" alt="Mountains" style="width: 475px; height: 337px ">
+                        <h3>Living room</h3>
+                        <p>Minimalist yet stylish living area.</p>
                     </div>
                 </div>
             </div>
             
             <div class="pcontent">
                 <img src="images/room5.png" alt="Bear" style="width:100%">
-                <h3>Some Other Work</h3>
-                <p>Lorem ipsum..</p>
+                <h3>Dedicated TV Room</h3>
+                <p>A dedicated room for Television and games.</p>
             </div>
         </div>
     </body>
