--- a/About.html
+++ b/About.html
@@ -3,10 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+
         <title>ID Assignment 1</title>
+
         <link rel="stylesheet" href="index1.css">
         <link rel="script" href="javascript.js">
-        <script src="https://kit.fontawesome.com/122871f124.js" 
+        <link rel="stylesheet" href="normalize.css">
+
+        <script src="https://kit.fontawesome.com/122871f124.js"></script>
+        <link rel="stylesheet" href="normalize.css">
         crossorigin="anonymous"></script>
     </head>
     <body>
