--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
+
         <title>ID Assignment 1</title>
+        
         <link rel="stylesheet" href="index1.css">
         <link rel="script" href="javascript.js">
+        <link rel="stylesheet" href="normalize.css">
+
         <script src="https://kit.fontawesome.com/122871f124.js" 
         crossorigin="anonymous"></script>
     </head>
