--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,8 @@
                     </div>
 
                     <div class="field">
-                        <label for="subject">Enquiry/Feedback</label>
-                        <textarea id="subject" name="subject" placeholder="Enter your comment here"></textarea>
+                        <label>Enquiry/Feedback</label>
+                        <textarea placeholder="Enter your comment here"></textarea>
                     </div>
 
                     <div class = "field">
