--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
             <div class="prow">
                 <div class="pcolumn">
                     <div class="pcontent">
-                        <img src="images/gameroom.png" alt="Mountains" style="width: 475px; height: 337px;">
+                        <img src="images/gameroom.png" alt="Mountains" style="width:100%">
                         <h3>Gameroom</h3>
                         <p>A lounge for games and more.</p>
                     </div>
@@ -43,7 +43,7 @@
 
                 <div class="pcolumn">
                     <div class="pcontent">
-                        <img src="images/kitchen1.png" alt="Lights" style="width: 475px; height: 337px;">
+                        <img src="images/kitchen1.png" alt="Lights" style="width:100%;height: auto;">
                         <h3>Kitchen</h3>
                         <p>Minimalist and stylish kitchen.</p>
                     </div>
@@ -51,7 +51,7 @@
 
                 <div class="pcolumn">
                     <div class="pcontent">
-                        <img src="images/modern-bedroom.png" alt="Nature" style="width: 475px; height: 337px;">
+                        <img src="images/modern-bedroom.png" alt="Nature" style="width:100%">
                         <h3>Modern bedroom</h3>
                         <p>Modern yet bright bedroom.</p>
                     </div>
@@ -59,7 +59,7 @@
 
                 <div class="pcolumn">
                     <div class="pcontent">
-                        <img src="images/room4.png" alt="Mountains" style="width: 475px; height: 337px ">
+                        <img src="images/room4.png" alt="Mountains" style="width: 100%">
                         <h3>Living room</h3>
                         <p>Minimalist yet stylish living area.</p>
                     </div>
